assets/objects/crate-toolbox/revisions/v0.81.0/NOTES.md
# crate-toolbox v0.81.0

L3 packaging/perf UPGRADE on the same `objectId`. No GLB. Not a new layer.

- After v0.80 deleted leftover own-property Material `customProgramCacheKey` so the r170 `Material.prototype.customProgramCacheKey` remains on the **3** shared packed color-only unlit MeshBasic materials (and after v0.78 cleared Material `onBeforeCompile` / `onBeforeRender`), **`pinColorOnlyUnlitBasicDefines` (wired through `pinColorOnlyUnlitBasicFlags` / `pinColorOnlyVisualMaterialFlags`) clears leftover Material `defines` so the r170 MeshBasicMaterial / Material default absence remains (`defines === undefined`) on packed color-only unlit MeshBasic materials** (3 unique shared wood/brass/steel instances). Procedural create pins the three shared instances once at share time and again via the entity helper after raycast disable. Packaged ingest pins after the same detect (does not hex-dedupe; does not invent materials or a replacement `#define` map). Does **not** invent custom `#define` maps or replacement shaders. Does **not** assign a sentinel empty `{}` (r170 `WebGLPrograms` treats `parameters.defines !== undefined` as present and walks keys into the program cache key). Does **not** touch Material `customProgramCacheKey` (v0.80). Does **not** touch Material `onBeforeCompile` / `onBeforeRender` (v0.78). Does **not** touch Mesh `onBeforeRender` / `onAfterRender` (v0.77). Does **not** touch Mesh `onBeforeShadow` / `onAfterShadow` (v0.79). Does **not** touch `customDepthMaterial` / `customDistanceMaterial`. Does **not** enable `castShadow` / `receiveShadow`. Does **not** pin `mesh.visible` (LOD visibility uses it). Does **not** change `matrixAutoUpdate` (v0.45 already freezes `matrixAutoUpdate` on static body LOD leaves after one `updateMatrixWorld(true)`; lid/latch/tool/fastener stay live). Does **not** change `matrixWorldAutoUpdate` / `layers` / `up` / `scale` / `rotation.order` / prior material pins including stencil companions / polygonOffset companions / dithering / A2C / blendColor / blendAlpha / customDepth/Distance clear / Mesh+Material render-callback clears / Mesh shadow-callback clear / customProgramCacheKey clear. Does **not** merge meshes across `body` / `lidPivot` / `latchPivot` / `tool`, fold the fastener into an LOD batch (`fastener` / `fastenerMesh` stay outside `LOD_MERGE_SKIP_NAMES`), rewrite material type, invent a GLB, change matrix freeze, change raycast no-ops, change fog/toneMapped/opaque FrontSide/blending/alpha/wireframe/depth/colorWrite/polygonOffset/stencil/clipping/alphaHash/forceSinglePass/NormalBlending companions/vertexColors/precision/shadowSide/visible/envMap companions/map-intensity companions/wireframeLinewidth/wireframe line-style/envMapRotation/blendColor/blendAlpha/dithering/A2C/polygonOffset companions/stencil companions/shadow/frustumCulled/renderOrder/layers/matrixWorldAutoUpdate/up/scale/rotation.order/customDepth/Distance/Mesh render-callback/Material compile-render-callback/Mesh shadow-callback/customProgramCacheKey pins, or change L4/L5 interaction. Named meshes `lidMesh` / `latchMesh` / `fastenerMesh` kept. The v0.37–v0.80 merge → weld → unused-attr strip → Uint16 compact → shared MeshBasic → Float16 → upload-release → matrix-freeze → raycast-disable → fog/toneMapped-pin → opaque-FrontSide-pin → shadow-flag-pin → frustumCulled-pin → blending/alpha-pin → GPU-state-pin → stencil-pin → clipping-pin → alphaHash-pin → NormalBlending-companions-pin → vertexColors-pin → precision-pin → shadowSide-pin → renderOrder-pin → visible-pin → envMap-companions-pin → map-intensity-companions-pin → wireframeLinewidth-pin → wireframe-line-style-pin → envMapRotation-pin → layers-pin → blendColor-pin → matrixWorldAutoUpdate-pin → up-pin → scale-pin → dithering/A2C-pin → rotation.order-pin → polygonOffset-companions-pin → stencil-companions-pin → customDepth/Distance-clear → Mesh render-callback-clear → Material compile/render-callback-clear → Mesh shadow-callback-clear → customProgramCacheKey-clear pipeline stays intact.
- **Verified r170 API (do not assume):** a fresh `MeshBasicMaterial` / `Material` does **not** set `defines` in the Material constructor (`REVISION` 170). The property is absent / `undefined` (`Object.hasOwn` is false). `WebGLPrograms` copies `defines: material.defines` into program parameters and, when `parameters.defines !== undefined`, appends each name/value into the program cache key array (alongside `customProgramCacheKey`). Leftover DCC/GLB `defines` objects — even an empty `{}` — fragment the program cache and force extra compiles on Quest Browser / TBDR. This pulse still deletes leftover Material `defines` on color-only unlit stand-in **materials** so packaged GLBs that leave leftover `#define` maps get corrected even when they still pass `isColorOnlyUnlitBasic`. A deliberately wrong color-only MeshBasic with a leftover non-empty `defines` map (or an empty `{}`) is corrected when it still passes `isColorOnlyUnlitBasic`. Do **not** invent a replacement `#define` map. Do **not** assign a sentinel empty `{}`. Do **not** touch Material `customProgramCacheKey`. Do **not** touch Material `onBeforeCompile` / `onBeforeRender`. Do **not** touch Mesh `onBeforeRender` / `onAfterRender`. Do **not** touch Mesh `onBeforeShadow` / `onAfterShadow`. Do **not** touch `customDepthMaterial` / `customDistanceMaterial`. Do **not** enable `castShadow` / `receiveShadow`. Do **not** pin `mesh.visible` — LOD visibility uses it. Do not change `matrixAutoUpdate` / `matrixWorldAutoUpdate` / `layers` / `up` / `scale` / `rotation.order` / prior material pins including stencil companions / polygonOffset companions / dithering / A2C / blendColor / blendAlpha / customDepth/Distance clear / Mesh+Material render-callback clears / Mesh shadow-callback clear / customProgramCacheKey clear.
- **Why:** Accidental DCC / packaged GLB leftover Material `defines` on color-only unlit midtone stand-ins fragment WebGL program cache keys (r170 `WebGLPrograms` walks defines into the cache key when the property is not `undefined`) and can force extra shader compiles on a TBDR mobile GPU. Clearing to the r170 absence keeps the Quest-safe opaque unlit contract beside the existing customProgramCacheKey / onBeforeCompile / Material compile/render-callback, Mesh render-callback, Mesh shadow-callback, customDepth/Distance, castShadow/receiveShadow, and shadowSide fences. Material program-cache leftover fence, not a geometry pack change. Does **not** invent custom shaders, transparent materials, a replacement `#define` map, a sentinel empty `{}`, enable shadows, touch Material `customProgramCacheKey`, touch Material compile/render callbacks, touch Mesh render callbacks or shadow callbacks, touch customDepth/Distance, pin `mesh.visible`, or change `matrixAutoUpdate` / `matrixWorldAutoUpdate` / `layers` / `up` / `scale` / `rotation.order` / prior material pins including stencil companions / polygonOffset companions / dithering / A2C / blendColor / blendAlpha.
- **Scope vs v0.80 Material customProgramCacheKey clear / v0.78 Material compile/render-callback clear:** v0.78 hits the **3** unique packed color-only visual **materials** (shared wood/brass/steel) with r170 Material `onBeforeCompile` / `onBeforeRender` instance absence. v0.80 hits the same **3** unique packed color-only visual **materials** with r170 Material `customProgramCacheKey` instance absence. v0.81 hits the same **3** unique packed color-only visual **materials** with r170 Material `defines` absence (`defines === undefined`) — the highest-value remaining Material program-cache leftover after v0.80 `customProgramCacheKey` and v0.78 `onBeforeCompile` / `onBeforeRender`. Mapped / lit stay at authored / r170 Material defaults. Collider materials stay untouched. Morph / interleaved skip the same pack-pipeline gate. Materials shared with a blocked collider / morph mesh skip the visual pin.
- **Gate (same as pack pipeline):** only color-only unlit MeshBasic. Skip `userData.collider` / `collider_*` names. Skip mapped / lit. Skip morph / interleaved geos (conservative). Skip materials shared with a blocked collider / morph mesh. Do not change `isColorOnlyUnlitBasic` (map / lightMap / aoMap / specularMap / alphaMap / envMap still must be falsy).
- **Measurement rule:** `userData.lod.stats.attrBytes` is the **pre-upload** CPU envelope (arrays still present at `attachToolboxLod`). After simulated / real GPU upload, live CPU attrBytes on those visuals → **0**; `BufferAttribute.count` (draws / tris / verts) stays. This pulse does not change that envelope.
- **Measured** `userData.lod.stats` (Three.js index counts + `position.count` + attribute/index byte length via `countGroupStats`; colliders skipped; unit tests, **not** headset) plus unique MeshBasic flags and visual Mesh shadow / frustum / renderOrder / layers / matrixWorldAutoUpdate / up / scale / rotation.order / customDepth/Distance / render-callback / shadow-callback flags:

  | Level | Draws | Tris (index/3) | Unique verts (v0.39 weld) | attrBytes (pre-upload v0.44 Float16) | Unique MeshBasic | fog / toneMapped / opaque FrontSide / blending+alpha / GPU-state / stencil / clipping / alphaHash+forceSinglePass / NormalBlending companions / vertexColors / precision / shadowSide / visible / envMap companions / map-intensity companions / wireframeLinewidth / linecap / linejoin / envMapRotation / blendColor / blendAlpha / dithering / A2C / polygonOffsetFactor / polygonOffsetUnits / stencilRef / stencilWriteMask / stencilFuncMask / stencilZFail / stencilZPass | material-render-callbacks-absent | customProgramCacheKey-default | defines-absent | shadow-off meshes | frustumCulled-on meshes | renderOrder-0 meshes | layers-default meshes | matrixWorldAutoUpdate-on meshes | up-default meshes | scale-default meshes | rotation-order-XYZ meshes | customDepth/Distance-absent meshes | render-callbacks-absent meshes | shadow-callbacks-absent meshes |
  | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
  | LOD0 | **6** | **240** | **230** | **2820** | wood + brass + steel | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0 / false / false / 0 / 0 / 0 / 0xff / 0xff / Keep / Keep** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | LOD1 | **4** | **96** | **100** | **1176** | same wood + same brass | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0 / false / false / 0 / 0 / 0 / 0xff / 0xff / Keep / Keep** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | LOD2 | **2** | **24** | **48** | **432** | same wood | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0 / false / false / 0 / 0 / 0 / 0xff / 0xff / Keep / Keep** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | Fastener (not LOD) | 1 | 12 | 24 | **216** | same brass | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0 / false / false / 0 / 0 / 0 / 0xff / 0xff / Keep / Keep** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | `drawCallsEstimate` (LOD0 + fastener) | **7** | | | | | | | | | | | | | | | | | | |

  Unique procedural MeshBasic instances stay **3**, all `fog === false` && `toneMapped === false` && `transparent === false` && `opacity === 1` && `depthWrite === true` && `depthTest === true` && `side === FrontSide` && `blending === NormalBlending` && `premultipliedAlpha === false` && `alphaTest === 0` && `wireframe === false` && `colorWrite === true` && `depthFunc === LessEqualDepth` && `polygonOffset === false` && `polygonOffsetFactor === 0` && `polygonOffsetUnits === 0` && `stencilWrite === false` && `stencilFunc === AlwaysStencilFunc` && `stencilRef === 0` && `stencilWriteMask === 0xff` && `stencilFuncMask === 0xff` && `stencilFail === KeepStencilOp` && `stencilZFail === KeepStencilOp` && `stencilZPass === KeepStencilOp` && `clippingPlanes === null` && `clipIntersection === false` && `clipShadows === false` && `alphaHash === false` && `forceSinglePass === false` && `blendSrc === SrcAlphaFactor` && `blendDst === OneMinusSrcAlphaFactor` && `blendEquation === AddEquation` && `blendSrcAlpha === null` && `blendDstAlpha === null` && `blendEquationAlpha === null` && `vertexColors === false` && `precision === null` && `shadowSide === null` && `visible === true` && `combine === MultiplyOperation` && `reflectivity === 1` && `refractionRatio === 0.98` && `lightMapIntensity === 1` && `aoMapIntensity === 1` && `wireframeLinewidth === 1` && `wireframeLinecap === 'round'` && `wireframeLinejoin === 'round'` && `envMap === null` && `envMapRotation.x === 0` && `envMapRotation.y === 0` && `envMapRotation.z === 0` && `blendColor.r === 0` && `blendColor.g === 0` && `blendColor.b === 0` && `blendAlpha === 0` && `dithering === false` && `alphaToCoverage === false`. Unique color-only MeshBasic defines-absent **3** (`material.defines === undefined`). Unique color-only MeshBasic customProgramCacheKey-default stay **3** (`!Object.hasOwn(customProgramCacheKey)` && the method resolves to `Material.prototype.customProgramCacheKey`). Unique color-only MeshBasic material-render-callbacks-absent stay **3** (`!Object.hasOwn(onBeforeCompile)` && `!Object.hasOwn(onBeforeRender)` && both resolve to `Material.prototype` empty no-ops). Visual MeshBasic shadow-callbacks-absent stay **13** (`!Object.hasOwn(onBeforeShadow)` && `!Object.hasOwn(onAfterShadow)` && both resolve to `Object3D.prototype` empty no-ops). Visual MeshBasic render-callbacks-absent stay **13** (`!Object.hasOwn(onBeforeRender)` && `!Object.hasOwn(onAfterRender)` && both resolve to `Object3D.prototype` empty no-ops). Visual MeshBasic customDepth/Distance-absent stay **13** (`customDepthMaterial == null` && `customDistanceMaterial == null`). Visual MeshBasic rotation-order-XYZ stay **13** (`rotation.order === 'XYZ'`). Visual MeshBasic scale-default stay **13** (`scale.x === 1` && `scale.y === 1` && `scale.z === 1`). Visual MeshBasic up-default stay **13** (`up.x === 0` && `up.y === 1` && `up.z === 0`). Visual MeshBasic matrixWorldAutoUpdate-on stay **13** (`matrixWorldAutoUpdate === true`). Visual MeshBasic layers-default stay **13** (`layers.mask === 1` && `layers.isEnabled(0)`). Visual MeshBasic renderOrder-0 stay **13** (`renderOrder === 0`). Visual MeshBasic frustumCulled-on stay **13** (`frustumCulled === true`). Visual MeshBasic shadow-off stay **13** (`castShadow === false` && `receiveShadow === false`). Visual MeshBasic raycast-off stay **13**. Frozen MeshBasic stay **3** (body LOD0/1/2). Live MeshBasic stay **10** (lid/latch/tool LOD meshes + fastener). `userData.l2.uniqueMaterials` **3**. Draws / tris / unique verts / attrBytes / matrix freeze / raycast-off / unique MeshBasic / shadow-off / frustumCulled-on / renderOrder-0 / layers-default / matrixWorldAutoUpdate-on / up-default / scale-default / rotation-order-XYZ / customDepth/Distance-absent / render-callbacks-absent / material-render-callbacks-absent / shadow-callbacks-absent / customProgramCacheKey-default unchanged vs v0.80. After simulated upload, CPU attrBytes on those 13 visual geos → 0.
- **Unit/mock evidence** (not headset): r170 defaults `new MeshBasicMaterial().defines === undefined` and `!Object.hasOwn(defines)` (`REVISION` 170); `WebGLPrograms` copies `defines: material.defines` and, when `parameters.defines !== undefined`, walks keys into the program cache key (empty `{}` still trips that check); a wrong color-only MeshBasic with a leftover non-empty `defines` map or empty `{}` is corrected by `pinColorOnlyUnlitBasicDefines` without inventing a replacement `#define` map, assigning a sentinel empty `{}`, touching Material `customProgramCacheKey`, touching Material `onBeforeCompile` / `onBeforeRender`, touching Mesh `onBeforeRender` / `onAfterRender`, touching Mesh `onBeforeShadow` / `onAfterShadow`, or changing fog / stencil / dithering / A2C / customDepth/Distance; prior pins including customProgramCacheKey-default **3**, material-render-callbacks-absent **3**, shadow-callbacks-absent **13**, render-callbacks-absent **13**, customDepth/Distance-absent **13**, rotation-order-XYZ **13**, scale-default **13**, up-default **13**, matrixWorldAutoUpdate-on **13**, layers-default **13**, renderOrder-0 **13**, frustumCulled-on **13**, and shadow-off **13** stay intact; procedural wood/brass/steel stay Quest-safe; mapped / lit MeshBasic stay authored; collider materials stay authored / default; `mesh.visible` is not pinned (LOD still uses group/mesh visibility); L4 `tryUse` closed→unlatched→open and L5 `tryDriveFastener` still mutate pivot / fastener transforms. Packaged ingest of a mock `lod*` fixture pins body + lid/latch/tool + fastener materials including a DCC leftover `defines` color-only MeshBasic; fail-soft (no lod groups) still pins those materials. Mapped MeshBasic stays authored.
- Named meshes required by tests stay: `lidMesh`, `latchMesh`, `fastenerMesh`. Unique canvases stay **0**. Color-only unlit MeshBasic on LOD0 / LOD1 / LOD2. `setToolboxLod` is still visibility-only. Geometry, collider names, and L4/L5 activity are the v0.4.0–v0.80.0 set. Session present-path chain (v0.15–v0.22) and v0.8 allocation scrub stay as they were. The v0.81 `behavior.json` sidecar is frozen next to this manifest (`source.behavior`) so the revision resolves without reading a later current sidecar.
- **KTX2 / Basis** remains the packaging step when a DCC GLB lands. No GLB in this revision.
- Quest 3 frame time / FFR still **unmeasured**. Do not treat this pulse as a 90 Hz pass. 90 Hz / 72 fallback are **requested**, not measured. Clearing leftover Material `defines` so the r170 absence (`defines === undefined`) remains is the intended delta; headset ms still **TODO**.
